--- a/practicing.html
+++ b/practicing.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vipin Website</title>
 </head>
 <body>
-    
+    <h1>THIS IS Heading</h1>
+    <!--This is for practice-->
+    <p1>This is Paragraph</p1>
 </body>
 </html>
