--- a/practicing.html
+++ b/practicing.html
@@ -8,6 +8,6 @@
 <body>
     <h1>THIS IS Heading</h1>
     <!--This is for practice-->
-    <p1>This is my very first Paragraph</p1>
+    <p1>Planning for s(o)</p1>
 </body>
 </html>
