--- a/practicing.html
+++ b/practicing.html
@@ -8,6 +8,6 @@
 <body>
     <h1>THIS IS Heading</h1>
     <!--This is for practice-->
-    <p1>Planning </p1>
+    <p1>Planning to work in two sets</p1>
 </body>
 </html>
