--- a/practicing.html
+++ b/practicing.html
@@ -8,6 +8,8 @@
 <body>
     <h1>THIS IS Heading</h1>
     <!--This is for practice-->
-    <p1>Project delievered</p1>
+    <p1>Project delievered</p1><hr>
+    <a href="https://www.rgpv.ac.in/">Click Here to Enter university website</a>
+    <img src="" alt="">
 </body>
 </html>
