--- a/practicing.html
+++ b/practicing.html
@@ -9,7 +9,7 @@
     <h1>THIS IS Heading</h1>
     <!--This is for practice-->
     <p1>Project delievered</p1><hr>
-    <a href="https://www.rgpv.ac.in/">Click Here to Enter university website</a>
+    <a href="https://www.rgpv.ac.in/">Click Here to Enter university webs</a>
     <img src="" alt="">
 </body>
 </html>
