--- a/practicing.html
+++ b/practicing.html
@@ -9,7 +9,15 @@
     <h1>THIS IS Heading</h1>
     <!--This is for practice-->
     <p1>Project delievered</p1><hr>
-    <a href="https://www.rgpv.ac.in/">Click Here to Enter university link</a>
+    <a href="https://www.rgpv.ac.in/" target="_main"><img src="" alt=""></a>
     <img src="" alt="">
+    <div>
+        <p1>Fruits</p1>
+        <ol type="A">
+            <li>Mango</li>
+            <li>Apple</li>
+            <li>Banana</li>
+        </ol>
+    </div>
 </body>
 </html>
