--- a/practicing.html
+++ b/practicing.html
@@ -12,7 +12,7 @@
     <a href="https://www.rgpv.ac.in/" target="_main"><img src="" alt=""></a>
     <img src="" alt="">
     <div>
-        <p1>Fruits and Vegetables</p1>
+        <p1>Fruits and Vegetable</p1>
         <ol type="A">
             <li>Mango</li>
             <li>Apple</li>
