--- a/practicing.html
+++ b/practicing.html
@@ -9,11 +9,12 @@
     <h1>THIS IS Heading</h1>
     <!--This is for practice-->
     <p1>Project delievered</p1><hr>
-    <a href="https://www.rgpv.ac.in/" target="_main"><img src="" alt=""></a>
+    <a href="https://www.rgpv.ac.in/" target="_parent"> Click for university website</a>
+    <button dissabled="true">Click to Reply</button>
     <img src="" alt="">
     <div>
         <p1>Fruits and Vegetable</p1>
-        <ol type="A">
+        <ol type="i">
             <li>Mango</li>
             <li>Apple</li>
             <li>Banana</li>
