--- a/practicing.html
+++ b/practicing.html
@@ -9,12 +9,36 @@
     <h1>THIS IS Heading</h1>
     <!--This is for practice-->
     <p1>Project delievered</p1><hr>
-    <a href="https://www.rgpv.ac.in/" target="_parent"> Click for university website</a>
-    <button dissabled="true">Click to Reply</button>
-    <img src="" alt="">
+    <a href="https://www.rgpv.ac.in/" target="_parent"> Click for university website</a><br>
+    <button dissabled="true">Click to Reply</button><br>
+    <img src="" alt=""><br>
+    <video src="videoplayback (4).mp4" controls width="100px"></video><br>
+    <div>
+        <table border="1">
+            <caption>This is my Class details</caption>
+            <tr>
+                <th>Class</th>
+                <th colspan="3">Student</th>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Shubham</td>
+                <td>15</td>
+                <td>Male</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Sunita</td>
+                <td>12</td>
+                <td>Female</td>
+            </tr>
+        </table>
+    </div>
     <div>
         <p1>Fruits and Vegetable</p1>
+    
         <ol type="i">
+        
             <li>Mango</li>
             <li>Apple</li>
             <li>Banana</li>
