--- a/practicing.html
+++ b/practicing.html
@@ -6,11 +6,28 @@
     <title>Document</title>
 </head>
 <body> 
+    <table border="1">
     <div>
-        
-        <form action="form.php">
-            <input type="text">
-        </form>
+        <tr>
+            <th>S.No</th>
+            <th colspan="3">Max Score</th>
+        </tr>
     </div>
+    <div>
+        <tr>
+            <td>1</td>
+            <td >ritu</td>
+            <td >34</td>
+            <td >girl</td>
+        </tr>
+    </div> <div>
+        <tr>
+            <td>2</td>
+            <td >sunil</td>
+            <td >49</td>
+            <td >boy</td>
+        </tr>
+    </div>
+</table>
 </body>
 </html>
