--- a/practicing.html
+++ b/practicing.html
@@ -20,7 +20,8 @@
             <td >34</td>
             <td >girl</td>
         </tr>
-    </div> <div>
+    </div> 
+    <div>
         <tr>
             <td>2</td>
             <td >sunil</td>
