--- a/practicing.html
+++ b/practicing.html
@@ -5,30 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body> 
-    <table border="1">
-    <div>
-        <tr>
-            <th>S.No</th>
-            <th colspan="3">Max Score</th>
-        </tr>
-    </div>
-    <div>
-        <tr>
-            <td>1</td>
-            <td >ritu</td>
-            <td >34</td>
-            <td >girl</td>
-        </tr>
-    </div> 
-    <div>
-        <tr>
-            <td>2</td>
-            <td >sunil</td>
-            <td >49</td>
-            <td >boy</td>
-        </tr>
-    </div>
-</table>
+<body>
+    <h1>Select Your Gender</h1>
+    <form>
+        <input type="radio" name="Gender">Male <br>
+        <input type="radio" name="Gender">Female
+    </form>
 </body>
 </html>
