--- a/practicing.html
+++ b/practicing.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Select Your Gender</h1>
-    <form>
-        <input type="radio" name="Gender">Male <br>
-        <input type="radio" name="Gender">Female
-    </form>
+    <h1>Select your language</h1>
+    <input type="checkbox" />HTML
+    <input type="checkbox" />CSS
+    <input type="checkbox" />JS
+    <input type="checkbox" />NODE 
 </body>
 </html>
