--- a/practicing.html
+++ b/practicing.html
@@ -6,10 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Select your language</h1>
-    <input type="checkbox" />HTML
-    <input type="checkbox" />CSS
-    <input type="checkbox" />JS
-    <input type="checkbox" />NODE 
+    <header> 
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>      
+          </ul>
+        </nav>
+      </header>
+      <a href="google">gooloooole</a>
+      <figure>
+        <img src="macbook.jpg">
+        <figcaption>This picture shows a macbook.</figcaption>
+      </figure>
 </body>
 </html>
