--- a/practicing.html
+++ b/practicing.html
@@ -19,5 +19,6 @@
         <img src="macbook.jpg">
         <figcaption>This picture shows a macbook.</figcaption>
       </figure>
+      <link rel="stylesheet" href="style.css">
 </body>
 </html>
