--- a/practicing.html
+++ b/practicing.html
@@ -20,6 +20,8 @@
         <figcaption>This picture shows a macbook.</figcaption>
       </figure>
       <link rel="stylesheet" href="style.css">
-    <p12.3>jo bhi ho ho jane do</p12.3>
+    <p12.3>jo bhi ho ho jane do</p12.3><br>
+    <img src="\downloadedimage.jpeg" alt="">
+    <img src="\download2nd.jpeg" alt="">
 </body>
 </html>
