--- a/practicing.html
+++ b/practicing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" type="text.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header> 
@@ -24,5 +24,6 @@
     <p12.3>jo bhi ho ho jane do</p12.3><br>
     <img src="\downloadedimage.jpeg" alt="">
     <img src="\download2nd.jpeg" alt="">
+    <a href="www.boogle.com">tukka marra hu</a>
 </body>
 </html>
