--- a/practicing.html
+++ b/practicing.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> 
-        <nav>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>      
-          </ul>
-        </nav>
-      </header>
-      <a href="google">gooloooole</a>
-      <figure>
-        <img src="macbook.jpg">
-        <figcaption>This picture shows a macbook.</figcaption>
-      </figure>
-      <link rel="stylesheet" href="style.css">
-    <p12.3>jo bhi ho ho jane do</p12.3><br>
-    <img src="\downloadedimage.jpeg" alt="">
-    <img src="\download2nd.jpeg" alt="">
-    <a href="www.boogle.com">tukka marra hu</a>
+  <a href="https://www.rgpv.ac.in/" target="_parent">My University website</a>
+  <img src="" alt="">
+  <video src="" autoplay></video>
+  <form action="" method="get">
+    <h1>Creating text field</h1>
+    <input type="text" placeholder="Write text here">
+    <label>Password</label>
+    <input type="password" placeholder="enter password">
+    <input type="submit">
+  </form>
+  <input type="date" value="2024-12-5">
+  <form action="">
+    <select name="System" id="">
+      <option value="Macos">Macos</option>
+      <option value="Windows">WNIDOWS</option>
+      <option value="Linux">LINUX</option>
+    </select>
+  </form>
+  <form action="">
+    Enter your Gender
+    <input type="radio" name="Gender">Male
+    <input type="radio" name="Gender">Female
+  </form>
+  <form action="">
+    Select System Spects:
+    <select name="System" id=""> Select System Spects
+      <option value="Windows">Windows</option>
+      <option value="linux">linux</option>
+      <option value="Macos">Macos</option>
+    </select>
+  </form>
 </body>
 </html>
