--- a/practicing.html
+++ b/practicing.html
@@ -4,39 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    p{
+      border: 3px solid black;
+      margin: 20px;
+    }
+  </style>
+  <link rel="stylesheet" href="C:\My Computer\Vipin\Almabetter\git\ripositories\repositories\MyLearning\test1\style.css">
 </head>
 <body>
-  <a href="https://www.rgpv.ac.in/" target="_parent">My University website</a>
-  <img src="" alt="">
-  <video src="" autoplay></video>
-  <form action="" method="get">
-    <h1>Creating text field</h1>
-    <input type="text" placeholder="Write text here">
-    <label>Password</label>
-    <input type="password" placeholder="enter password">
-    <input type="submit">
-  </form>
-  <input type="date" value="2024-12-5">
-  <form action="">
-    <select name="System" id="">
-      <option value="Macos">Macos</option>
-      <option value="Windows">WNIDOWS</option>
-      <option value="Linux">LINUX</option>
-    </select>
-  </form>
-  <form action="">
-    Enter your Gender
-    <input type="radio" name="Gender">Male
-    <input type="radio" name="Gender">Female
-  </form>
-  <form action="">
-    Select System Spects:
-    <select name="System" id=""> Select System Spects
-      <option value="Windows">Windows</option>
-      <option value="linux">linux</option>
-      <option value="Macos">Macos</option>
-    </select>
-  </form> 
+  <p>Content 1</p>
+  <p>Content 2</p>
+  <p>Content 3</p>
+  <p>Content 4</p>
 </body>
 </html>
