--- a/practicing.html
+++ b/practicing.html
@@ -8,7 +8,7 @@
 <body>
  <p>My Website 1</p>
  <p id="myDiv1">My Website 2</p>
- <p>My Website 3</p>
+ <p id="myDiv2">My Website 3</p>
  <p>My Website 4</p>
   <script src= https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js> </script>
 <script>
@@ -45,6 +45,8 @@
       });
 
   });
+
 </script>
+<input type="text" placeholder="khaali">
 </body>
 </html>
