--- a/practicing.html
+++ b/practicing.html
@@ -6,11 +6,18 @@
   <title>Document</title>
 </head>
 <body>
+  <b></b>
   kkkk
-  kkkk
-  kkkk
-  kkkk
-  jjjjj
-  jjjjj
+  <a href="google.com" target="_blank"><img src="" alt=""></a>
+  <img src="" alt="">
+  <table>
+    <tr>
+      <td>s no</td>
+      <td>Name</td>
+      <td>Class</td>
+      
+    </tr>
+  </table>
+
 </body>
 </html>
