--- a/practicing.html
+++ b/practicing.html
@@ -25,5 +25,9 @@
             <option value="Goat">goat</option>
         </select>
     </form>
+    <a href="www.google.com" target="_parent"><img src="" alt=""></a>
+    <section>
+        
+    </section>
 </body>
 </html>
